<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="action_settings">Settings</string>

    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>

    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone_my_own_app">CAPSTONE: MY OWN APP</string>

    <string name="this_button_will_launch_my_spotify_streamer_app">This button will launch my Spotify Streamer app!</string>
    <string name="this_button_will_launch_my_scores_app">This button will launch my Scores app!</string>
    <string name="this_button_will_launch_my_library_app">This button will launch my Library app!</string>
    <string name="this_button_will_launch_my_build_it_bigger_app">This button will launch my Build It Bigger app!</string>
    <string name="this_button_will_launch_my_xyz_reader_app">This button will launch my XYZ Reader app!</string>
    <string name="this_button_will_launch_my_capstone_app">This button will launch my Capstone app!</string>

</resources>
