<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:gravity="center_horizontal"
              tools:context=".MainActivity">

    <TextView
            android:text="@string/my_nanodegree_apps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <Button
            style="@style/PrimaryButtonAppTheme"
            android:id="@+id/button_spotify_streamer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/spotify_streamer"
            android:onClick="onButtonClick"/>

    <Button
            style="@style/PrimaryButtonAppTheme"
            android:id="@+id/button_scores_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/scores_app"
            android:onClick="onButtonClick"/>

    <Button
            style="@style/PrimaryButtonAppTheme"
            android:id="@+id/button_library_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/library_app"
            android:onClick="onButtonClick"/>

    <Button
            style="@style/PrimaryButtonAppTheme"
            android:id="@+id/button_build_it_bigger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/build_it_bigger"
            android:onClick="onButtonClick"/>

    <Button
            style="@style/PrimaryButtonAppTheme"
            android:id="@+id/button_xyz_reader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/xyz_reader"
            android:onClick="onButtonClick"/>

    <Button
            style="@style/SecondaryButtonAppTheme"
            android:id="@+id/button_capstone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/capstone_my_own_app"
            android:onClick="onButtonClick"/>

</LinearLayout>
